--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@ body{
   margin: 0;
   padding: 0;
 }
+.app{
+  /* max-width: 34.4rem; */
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  place-items: center;
+}
 nav{
   background-color: #F55A5A;
   color: #FFFFFF;
@@ -10,6 +18,7 @@ nav{
   justify-content: center;
   gap: 4px;
   padding: 16px;
+  margin-bottom: 2.8rem;
 }
 nav img{
   width: 24px;
@@ -19,4 +28,73 @@ nav img{
 nav h2{
   font-size: 14px;
   font-weight: 500;
+}
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 80vw; */
+  margin: 0 40px;
+}
+.card{
+  display: flex;
+  gap: 19px;
+}
+.cover-img{
+  width: 7.813rem;
+  height: 10.5rem;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+.content{
+  display: flex;
+}
+img, h1, h2, h3, p{
+  margin: 0;
+}
+.location-img{
+  width: 0.44rem;
+  height: 0.625rem;
+  margin-right: 0.25rem;
+}
+.content h2{
+  color: #2B283A;
+  font-size: 10px;
+  font-weight: 500;
+  margin-right: 12px;
+}
+.content a{
+  color: #918E9B;
+  font-size: 0.64rem;
+  font-weight: 500;
+}
+.main-content{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* margin: 0; */
+}
+.main-content h1{
+  font-size: 1.563rem;
+  margin: 4px 0 14px 0;
+}
+.main-content h3{
+  font-size: 0.64rem;
+  font-weight: bold;
+  color: #2B283A;
+  margin-bottom: 9px;
+}
+.main-content p{
+  font-size: 0.64rem;
+  color: #2B283A;
+  width: 20.4rem;
+}
+.line{
+  min-width: 478px;
+  margin: 1.2rem;
+  color: #F5F5F5;
 }
